--- a/src/Components/UI/Navbar.module.css
+++ b/src/Components/UI/Navbar.module.css
@@ -12,7 +12,7 @@
     color: black;
     border: none;
     font-size: 16px;
-    padding: 15px 32px;
+    padding: 15px 40px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
@@ -20,6 +20,7 @@
     border-radius: 10px;
     cursor: pointer;
 }
+
 .button:hover{
     background-color: white;
 }
@@ -27,8 +28,67 @@
     color: white;
     text-decoration: none;
     font-size: 16px;
-    margin: 15px;
+    margin: 78px;
     position: relative;
     font-weight: 200;
     
 }
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    border-radius: 10px;
+    font-family: inherit;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+  }
+  
+
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color:white;
+    width: 12%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 10px;
+  }
+  
+  .dropdown-content button {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-radius: 10px;
+    font-size: 16px;
+    padding: 15px 40px;
+    text-align: center;
+    font-size: 16px;
+    width: 50px;
+    background-color: white;
+    border: none;
+    margin: 4px 8px;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+  
+  .dropdown-content button:hover {
+    background-color: #ddd;
+    width: 90%;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
