--- a/src/Components/UI/Sidebar/Elements.module.css
+++ b/src/Components/UI/Sidebar/Elements.module.css
@@ -1,19 +1,26 @@
-.scroll-container {
+
+.container{
+  margin: 10px;
+  padding: 20px;
+}
+/* .scroll-container {
     overflow-x: auto;
     white-space: nowrap;
     color: white;
     padding: 10px 0;
+    padding-left: 3px;
   }
   
   .scroll-items {
     display: inline-block;
     padding-right: 20px; 
+    
   }
   
   .scroll-item {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #eee;
+    background-color: #a31c1c;
     border-radius: 4px;
     margin-right: 10px;
   }
@@ -35,10 +42,11 @@
   .scroll-container::-webkit-scrollbar-thumb:hover {
     background-color: #bbb;
   }
-  
+   */
   .shapes {
     display: flex;
     flex-wrap: wrap;
+    cursor: pointer;
    
   }
   
@@ -49,7 +57,7 @@
   }
   
   .shape-container {
-    margin: 10px;
+    margin: 15px;
     flex: 1 1 200px; 
     
   }
