--- a/src/Components/UI/Sidebar/Leftpanel.module.css
+++ b/src/Components/UI/Sidebar/Leftpanel.module.css
@@ -5,8 +5,28 @@
   position: absolute;
   left: 7%;
   padding-top: 20px;
-  overflow: scroll;
+  overflow: auto;
   /* padding-left: 20%; */
   display: flex;
   flex-direction: column;
+ 
 }
+
+
+  .leftpanel::-webkit-scrollbar {
+    height: 12px;
+  }
+  
+  .leftpanel::-webkit-scrollbar-track {
+    background-color: rgb(54, 53, 53);
+  }
+  
+  .leftpanel::-webkit-scrollbar-thumb {
+    background-color:  rgb(54, 53, 53);
+    border-radius: 6px;
+  }
+   
+  .leftpanel::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(95, 93, 93);
+  } 
+  
