--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,26 @@
 
 html {
   font-family: 'Noto Sans JP', sans-serif;
+
+ 
+}
+::-webkit-scrollbar {
+  height: 12px;
+  width: 5px;
 }
 
+::-webkit-scrollbar-track {
+  background-color: rgb(54, 53, 53);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color:  rgb(54, 53, 53);
+  border-radius: 6px;
+}
+ 
+::-webkit-scrollbar-thumb:hover {
+  background-color:rgb(95, 93, 93);
+} 
 body {
   margin: 0;
   background-color: #ebebf2;
