--- a/src/Components/UI/Canvas.module.css
+++ b/src/Components/UI/Canvas.module.css
@@ -1,14 +1,14 @@
 
 .canvas-container {
-    position: relative;
-    width: 500px;
-    height: 500px; 
-    background-color: white;
-    top: 100%; 
-    left: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  margin-left: 39%;
+  padding: 0px;
+  width: 37%;
+  height: 87%;
+  box-sizing: border-box;
   }
-  .center-canvas{
-    position: absolute;
-    top: 50%;
-    left: 40%;
-  }
+
+
