--- a/src/Components/UI/Sidebar/Rightpanel.module.css
+++ b/src/Components/UI/Sidebar/Rightpanel.module.css
@@ -11,6 +11,11 @@
   color: white;
   padding: 10px;
 }
+.rightPanel::-webkit-scrollbar {
+  /* height: 50vh; */
+  border-radius: 20px;
+  width: 15px;
+}
 .btn{
 background-color:rgb(54, 53, 53) ;
 cursor: pointer;
