--- a/src/Components/UI/Sidebar/Searchbar.module.css
+++ b/src/Components/UI/Sidebar/Searchbar.module.css
@@ -20,9 +20,8 @@
   }
   .searchbtn{
     position: absolute;
-    position: absolute;
-    top: 06%;
-    left: 70%;
+    top: 38px;
+    left: 293px;
     color: black;
     
   }
