--- a/src/Components/UI/Sidebar/Texts.module.css
+++ b/src/Components/UI/Sidebar/Texts.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: flex-start;
     margin-top: 20px;
+    margin-left: 16px;
   }
 .button:hover{
   background-color: rgb(71, 69, 69);
