--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Noto Sans JP', sans-serif;
-
- 
+  font-family: "Noto Sans JP", "sans-serif", "Tangerine", "inconsolata",
+    "pacifico", "roboto", "Quicksand","Rancho","VT323";
 }
+
 ::-webkit-scrollbar {
   height: 12px;
   width: 5px;
@@ -19,15 +19,14 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color:  rgb(54, 53, 53);
+  background-color: rgb(54, 53, 53);
   border-radius: 6px;
 }
- 
+
 ::-webkit-scrollbar-thumb:hover {
-  background-color:rgb(95, 93, 93);
-} 
+  background-color: rgb(95, 93, 93);
+}
 body {
   margin: 0;
   background-color: #ebebf2;
 }
-
