--- a/src/Components/UI/Canvas.module.css
+++ b/src/Components/UI/Canvas.module.css
@@ -3,11 +3,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
   margin-left: 39%;
   padding: 0px;
-  width: 37%;
-  height: 87%;
+  width: 500px;
+  height: 400px;
   box-sizing: border-box;
   }
 
